--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,15 +5,14 @@
   }
 
 
+
 }
 @media screen and (max-width: 1200px) {
 
 
-
-
   nav ul li {
       text-align: center;
-      width: 100%;
+      width: 100%!important;
   }
 
 }
